--- a/tp13_mvc1/cours_mvc_devisi/app/view/fragment/fragmentCaveMenu.html
+++ b/tp13_mvc1/cours_mvc_devisi/app/view/fragment/fragmentCaveMenu.html
@@ -19,8 +19,11 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
            aria-haspopup="true" aria-expanded="false">PRODUCTEUR <span class="caret"></span></a>
-        <ul class="dropdown-menu">            
-          <li><a href="?">?</a></li>
+        <ul class="dropdown-menu">
+          <li><a href="router1.php?action=producteurReadAll">Liste des producteurs</a></li>
+          <li><a href="router1.php?action=producteurReadId">Affichage d'un producteur par son id</a></li>
+          <li><a href="router1.php?action=producteurCreate">Insertion d'un producteur</a></li>
+          <li><a href="router1.php?action=producteurRegions">Liste sans doublons des régions</a></li>
         </ul>
       </li>         
     </ul>
