--- a/tp13_mvc1/app/view/fragment/fragmentCaveMenu.html
+++ b/tp13_mvc1/app/view/fragment/fragmentCaveMenu.html
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="router1.php?action=CaveAccueil">Cave</a>
+      <a class="navbar-brand" href="router1.php?action=CaveAccueil">PLANTIER Clément</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="dropdown">
@@ -25,7 +25,14 @@
           <li><a href="router1.php?action=producteurCreate">Insertion d'un producteur</a></li>
           <li><a href="router1.php?action=producteurRegions">Liste sans doublons des régions</a></li>
         </ul>
-      </li>         
+      </li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+           aria-haspopup="true" aria-expanded="false">DOCUMENTATION <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="router1.php?action=mesPropositions">Mes propositions</a></li>
+        </ul>
+      </li>
     </ul>
   </div>
 </nav>
