--- a/tp14_mvc2/app/view/fragment/fragmentCaveMenu.html
+++ b/tp14_mvc2/app/view/fragment/fragmentCaveMenu.html
@@ -22,9 +22,10 @@
            aria-haspopup="true" aria-expanded="false">PRODUCTEUR <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="router2.php?action=producteurReadAll">Liste des producteurs</a></li>
-          <li><a href="router2.php?action=producteurReadId">Affichage d'un producteur par son id</a></li>
+          <li><a href="router2.php?action=producteurReadId&target=producteurReadOne">Affichage d'un producteur par son id</a></li>
           <li><a href="router2.php?action=producteurCreate">Insertion d'un producteur</a></li>
           <li><a href="router2.php?action=producteurRegions">Liste sans doublons des régions</a></li>
+          <li><a href="router2.php?action=producteurReadId&target=producteurDeleted">Suppression d'un producteur</a></li>
         </ul>
       </li>
       <li class="dropdown">
